syntax = "proto3";

package twirp.v1;

service RoomService {
    rpc CreateRoom(CreateRoomRequest) returns (CreateRoomResponse) {}
    rpc VerifyRoom(VerifyRoomRequest) returns (VerifyRoomResponse) {}
}

message CreateRoomRequest {
    string name = 1;
    string room_id = 2;
}

message CreateRoomResponse {
    string access_token = 1;
    string room_id = 2;
}

message VerifyRoomRequest {
    string room_id = 1;
}

message VerifyRoomResponse {
    bool exists = 1;
}